--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
+    "happypack": "^5.0.1",
     "html-webpack-plugin": "^2.30.1",
     "http": "0.0.1-security",
     "node-notifier": "^5.1.2",
